test/corpus/attributes.txt
==================
Class guards
==================

bundle agent main
{
  vars:
    "foo"
      string => "bar",
      if => "any";

  reports:
    "Hello, world!";
}

---

(source_file
  (bundle_block
    (bundle_keyword)
    (bundle_type)
    (bundle_name)
    (bundle_body
      (bundle_section
        (promise_guard)
        (promise
          (promiser)
          (attribute
            (attribute_name)
            (right_value
              (quoted_string)))
          (attribute
            (attribute_name)
            (right_value
              (quoted_string)))))
      (bundle_section
        (promise_guard)
        (promise
          (promiser))))))
