test/corpus/empty_bundle.txt
==================
Empty bundle
==================

bundle agent my_bundle {}

---

(source_file
  (bundle_block
    (bundle_block_keyword)
    (bundle_block_type)
    (bundle_block_name)
    (bundle_block_body)))
