test/corpus/hello_world.txt
==================
Hello world reports promise
==================

bundle agent my_bundle
{
  reports:
    "Hello World!";
}

---

(source_file
  (bundle_block
    (bundle_keyword)
    (bundle_type)
    (bundle_name)
    (bundle_body
      (bundle_section
        (promise_guard)
        (promise
          (promiser))))))
