test/corpus/indexing.txt
==================
Indexing with @ operator
==================

bundle agent main
{
  vars:
    enabled::
      "remotes" slist => getindices( @(data[remote_hubs]) );
}
---

(source_file
    (bundle_block
    (bundle_block_keyword)
    (bundle_block_type)
    (bundle_block_name)
    (bundle_block_body
        (bundle_section
        (promise_guard)
        (class_guarded_promises
            (class_guard)
            (promise
            (promiser)
            (attribute
                (attribute_name)
                (call
                (calling_identifier
                    (qualified_identifier))
                (at_expression
                    (at_expression_operator)
                    (at_expression_start)
                    (at_expression_reference
                        (indexed_identifier))
                      (at_expression_end))))))))))

==================
Indexing with $ operator
==================

bundle agent main
{
  vars:
    "dmi"
      string => $(bios_array[1]);
}

---

(source_file
    (bundle_block
    (bundle_block_keyword)
    (bundle_block_type)
    (bundle_block_name)
    (bundle_block_body
        (bundle_section
        (promise_guard)
        (promise
            (promiser)
            (attribute
            (attribute_name)
            (dollar_expression
                (dollar_expression_operator)
                (dollar_expression_start)
                (dollar_expression_reference
                (indexed_identifier))
                (dollar_expression_end))))))))
