test/corpus/stakeholder.txt
==================
Identifier as stakeholder
==================

bundle agent my_bundle
{
  reports:
    "promiser" -> stakeholder;
}

---

(source_file
  (bundle_block
    (bundle_block_keyword)
    (bundle_block_type)
    (bundle_block_name)
    (bundle_block_body
      (bundle_section
        (promise_guard)
        (promise
          (promiser)
          (stakeholder
            (qualified_identifier)))))))

==================
Quoted string as stakeholder
==================

bundle agent my_bundle
{
  reports:
    "promiser" -> "stakeholder";
}

---

(source_file
  (bundle_block
    (bundle_block_keyword)
    (bundle_block_type)
    (bundle_block_name)
    (bundle_block_body
      (bundle_section
        (promise_guard)
        (promise
          (promiser)
          (stakeholder
            (quoted_string)))))))
